--- a/styles/HomePage/section3.module.css
+++ b/styles/HomePage/section3.module.css
@@ -1,14 +1,14 @@
 .HomePage_section2__container{
-    @apply mt-14 relative;
+    @apply relative mb-24;
 }
 
 .section2__card{
-    @apply flex flex-col bg-white w-full rounded-2xl p-8 sm:p-4 sm:pb-10 ;
+    @apply flex flex-col w-full p-8 bg-white rounded-2xl sm:p-4 sm:pb-10 ;
 }
 
 .section2__card--innercard{
     @apply flex flex-col items-center justify-center p-8 rounded-2xl bg-[url('../../public/assets/CFB/section2.png')];
-    @apply bg-cover bg-no-repeat text-white;
+    @apply text-white bg-no-repeat bg-cover;
 }
 
 .section2__card--innercard2{
@@ -16,13 +16,13 @@
 }
 
 .section2__card--innercard2 h1{
-    @apply font-tertiary text-xl lg:text-2xl;
+    @apply text-xl font-tertiary lg:text-2xl;
 }
 
 .section2__card--innercard2 p{
-    @apply font-secondary text-xs lg:text-sm;
+    @apply text-xs font-secondary lg:text-sm;
 }
 
 .section2__circle-dropdown{
-    @apply absolute bottom-[1%] right-[10%] md:left-[48%] hover:animate-spin;
+    @apply absolute bottom-[1%] right-[10%] md:left-[48%];
 }
